chore: fixed spec status from ed to unofficial!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ></script>
     <script class="remove">
       var respecConfig = {
-        specStatus: 'ED',
+        specStatus: 'unofficial',
         editors: [
           { name: 'Jori Lehtinen', url: 'https://github.com/jortsupetterson' },
         ],
